--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "prettier": "2.7.1",
+    "react-app-alias": "^2.2.1",
     "react-app-rewired": "^2.2.1",
     "tailwindcss": "^3.1.8"
   },
