--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,9 @@
     "baseUrl": ".",
     "paths": {
       "root": ["."],
-      "@": ["src"]
+      "@assets": ["src/assets"],
+      "@components": ["src/components"],
+      "@data": ["src/data"]
     }
   }
 }
