--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
   "scripts": {
     "start": "concurrently \"react-app-rewired start\" \"json-server --watch src/data/items.json --port 3004\"",
     "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
-    "eject": "react-scripts eject",
-    "lint": "eslint --fix src/data/*"
+    "test": "react-app-rewired test"
   },
   "eslintConfig": {
     "extends": [
