--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "styled-components": "^5.3.5"
   },
   "scripts": {
-    "start": "concurrently \"react-app-rewired start\" \"json-server --watch src/data/items.json --port 3004\"",
-    "build": "react-app-rewired build",
+    "start": "concurrently \"react-scripts start\" \"json-server --watch src/data/items.json --port 3004\"",
+    "build": "react-scripts build",
     "test": "react-app-rewired test"
   },
   "eslintConfig": {
@@ -39,16 +39,12 @@
     ]
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^2.0.7",
-    "customize-cra": "^1.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "eslint-plugin-testing-library": "^5.6.1",
     "prettier": "2.7.1",
-    "react-app-alias": "^2.2.1",
-    "react-app-rewired": "^2.2.1",
     "tailwindcss": "^3.1.8"
   },
   "overrides": {
