--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_SERVER_URL=https://familiar-global-pram.glitch.me/
+REACT_APP_PROD_SERVER_URL=https://familiar-global-pram.glitch.me
+REACT_APP_DEV_SERVER_URL=http://localhost:3004
